--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "flighthelp-ui",
   "version": "0.0.2",
   "description": "",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/flighthelp-ui.es.js",
+      "require": "./dist/flighthelp-ui.umd.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "vite build",
     "storybook": "storybook dev -p 6006",
@@ -14,15 +21,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.8",
-    "@mui/styles": "^6.4.8",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+  "peerDependencies": {
+    "@emotion/react": ">=11.0.0",
+    "@emotion/styled": ">=11.0.0",
+    "@mui/material": ">=5.0.0",
+    "@mui/styles": ">=5.0.0",
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0"
   },
-  "peerDependencies": {},
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
     "@storybook/addon-essentials": "^8.6.7",
@@ -44,6 +50,12 @@
     "typescript": "^5.8.2",
     "vite": "^6.2.2",
     "vite-plugin-dts": "^4.5.3",
-    "vitest": "^3.0.9"
+    "vitest": "^3.0.9",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.8",
+    "@mui/styles": "^6.4.8",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
