--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.10.16",
+    "@mui/styles": "^5.10.16",
     "@storybook/addon-essentials": "^8.6.7",
     "@storybook/addon-onboarding": "^8.6.7",
     "@storybook/blocks": "^8.6.7",
@@ -45,17 +49,16 @@
     "@vitest/browser": "^3.0.9",
     "@vitest/coverage-v8": "^3.0.9",
     "playwright": "^1.51.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "storybook": "^8.6.7",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
     "vite": "^6.2.2",
     "vite-plugin-dts": "^4.5.3",
-    "vitest": "^3.0.9",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.10.16",
-    "@mui/styles": "^5.10.16",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "vitest": "^3.0.9"
+  },
+  "dependencies": {
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
