--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/styles": "^5.10.16",
     "@storybook/addon-essentials": "^8.6.7",
     "@storybook/addon-onboarding": "^8.6.7",
+    "@storybook/addon-styling": "^1.3.7",
     "@storybook/blocks": "^8.6.7",
     "@storybook/builder-webpack5": "^8.6.7",
     "@storybook/experimental-addon-test": "^8.6.7",
