--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "flighthelp-ui",
   "version": "0.0.7",
   "description": "",
+  "main": "./dist/flighthelp-ui.umd.js",
+  "module": "./dist/flighthelp-ui.es.js",
+  "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "files": [
     "dist",
     "src/theme/types/material-ui-styles.d.ts"
@@ -11,6 +15,9 @@
       "import": "./dist/flighthelp-ui.es.js",
       "require": "./dist/flighthelp-ui.umd.js",
       "types": "./dist/index.d.ts"
+    },
+    "./styles": {
+      "types": "./src/theme/types/material-ui-styles.d.ts"
     }
   },
   "scripts": {
